--- a/django/templates/search.html
+++ b/django/templates/search.html
@@ -1,72 +1,80 @@
 <html>
 <head>
-<title>Парсер решений судов</title>
+    <title>Парсер решений судов</title>
 </head>
 <body>
 <h2>Поиск документов</h2>
 <form action="/" method="get">
-    Судья: <input type="text" name="judge" value="{{judge}}" />
-    Год: <input type="number" name="year" value="{{year}}" min="2018"/>
-    Статья: <input type="text" name="article" value="{{article}}" />
-    Регион: <select name="region">
-            <option value=""></option>
-{% for name in regions %}
-	<option value="{{ name }}"
-            {% if name == selected_region %}selected="selected"{% endif %}
-    >{{ name }}</option>
-{% endfor %}
-        </select>
-<input type="submit" value="Искать" />
+    Судья: <input type="text" name="judge" value="{{ judge }}"/>
+    Год: <input type="number" name="year" value="{{ year }}" min="2018"/>
+    Статья: <input type="text" name="article" value="{{ article }}"/>
+    Регион:
+    <select name="region">
+        <option value=""></option>
+        {% for name in regions %}
+            <option value="{{ name }}" {% if name == selected_region %}selected="selected"{% endif %}>
+                {{ name }}
+            </option>
+        {% endfor %}
+    </select>
+    <input type="submit" value="Искать"/>
+    <p>
+        Метаданные <input type="checkbox" name="metadata" value="metadata" checked>
+        Фабула <input type="checkbox" name="fabula" value="fabula">
+        Показания свидетелей <input type="checkbox" name="witness" value="witness">
+        Описание доказательств <input type="checkbox" name="prove" value="prove">
+        Размышления судьи <input type="checkbox" name="meditation" value="meditation">
+    </p>
 </form>
 {% if documents %}
     <div style="text-align: center; margin-bottom: 20px;">
         {% for num, url in pages %}
             <span style="margin: 3px;">
                 {% if url %}
-                    <a href="{{url}}">{{num}}</a>
+                    <a href="{{ url }}">{{ num }}</a>
                 {% else %}
-                    {{num}}
+                    {{ num }}
                 {% endif %}
             </span>
         {% endfor %}
     </div>
     <table border="1">
         <thead>
-            <tr>
-                <th>Документ</th>
-                <th>Регион</th>
-                <th>Суд</th>
-                <th>Дело</th>
-                <th>Судья</th>
-                <th>Обвиняемый</th>
-                <th>Дата</th>
-                <th>Статьи</th>
-                <th>Ссылка</th>
-            </tr>
+        <tr>
+            <th>Документ</th>
+            <th>Регион</th>
+            <th>Суд</th>
+            <th>Дело</th>
+            <th>Судья</th>
+            <th>Обвиняемый</th>
+            <th>Дата</th>
+            <th>Статьи</th>
+            <th>Ссылка</th>
+        </tr>
         </thead>
         <tbody>
-            {% for item in documents %}
-                <tr>
-                    <td><a href="/doc{{ item.id }}">{{item.header}}</a></td>
-                    <td>{{item.region}}</td>
-                    <td>{{item.court}}</td>
-                    <td>{{item.number}}</td>
-                    <td>{{item.judge}}</td>
-                    <td>{{item.accused}}</td>
-                    <td>{{item.date}}</td>
-                    <td>{{item.article}}</td>
-                    <td><a href="{{item.url}}">{{item.url}}</a></td>
-                </tr>
-            {% endfor %}
+        {% for item in documents %}
+            <tr>
+                <td><a href="/doc{{ item.id }}">{{ item.header }}</a></td>
+                <td>{{ item.region }}</td>
+                <td>{{ item.court }}</td>
+                <td>{{ item.number }}</td>
+                <td>{{ item.judge }}</td>
+                <td>{{ item.accused }}</td>
+                <td>{{ item.date }}</td>
+                <td>{{ item.article }}</td>
+                <td><a href="{{ item.url }}">{{ item.url }}</a></td>
+            </tr>
+        {% endfor %}
         </tbody>
     </table>
     <div style="text-align: center; margin-top: 20px;">
         {% for num, url in pages %}
             <span style="margin: 3px;">
                 {% if url %}
-                    <a href="{{url}}">{{num}}</a>
+                    <a href="{{ url }}">{{ num }}</a>
                 {% else %}
-                    {{num}}
+                    {{ num }}
                 {% endif %}
             </span>
         {% endfor %}
