--- a/django/templates/lawdoc.html
+++ b/django/templates/lawdoc.html
@@ -1,9 +1,7 @@
-<!DOCTYPE html>
-{% load static %}
 <html>
+<body>
 <head>
-<link rel="stylesheet" href="{% static 'css/styles.css' %}"/>
-<title>Парсер решений судов</title>
+    <title>Парсер решений судов</title>
 </head>
 
 <h2>{{ header }}</h2>
